<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>EditPlaylist</class>
 <widget class="QMainWindow" name="EditPlaylist">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Edit Channel List</string>
  </property>
  <property name="windowIcon">
   <iconset resource="images.qrc">
    <normaloff>:/icons/images/edit.png</normaloff>:/icons/images/edit.png</iconset>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLabel" name="labelName">
        <property name="text">
         <string>Name:</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="editName"/>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QTreeWidget" name="playlist">
      <property name="dragEnabled">
       <bool>true</bool>
      </property>
      <property name="dragDropMode">
       <enum>QAbstractItemView::InternalMove</enum>
      </property>
      <property name="animated">
       <bool>true</bool>
      </property>
      <attribute name="headerDefaultSectionSize">
       <number>29</number>
      </attribute>
      <column>
       <property name="text">
        <string notr="true">#</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>Channel</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>Categories (separated with commas)</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>URL</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>Language</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>EPG</string>
       </property>
      </column>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QToolBar" name="toolBar">
   <property name="windowTitle">
    <string>Toolbar</string>
   </property>
   <property name="iconSize">
    <size>
     <width>22</width>
     <height>22</height>
    </size>
   </property>
   <property name="toolButtonStyle">
    <enum>Qt::ToolButtonTextBesideIcon</enum>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="actionAddChannel"/>
   <addaction name="actionDelete"/>
   <addaction name="separator"/>
   <addaction name="actionImport"/>
   <addaction name="actionReload"/>
   <addaction name="actionSave"/>
   <addaction name="actionClose"/>
  </widget>
  <action name="actionAddChannel">
   <property name="icon">
    <iconset resource="images.qrc">
     <normaloff>:/icons/images/video.png</normaloff>:/icons/images/video.png</iconset>
   </property>
   <property name="text">
    <string>Add Channel</string>
   </property>
   <property name="toolTip">
    <string>Add Channel</string>
   </property>
  </action>
  <action name="actionDelete">
   <property name="icon">
    <iconset resource="images.qrc">
     <normaloff>:/icons/images/editdelete.png</normaloff>:/icons/images/editdelete.png</iconset>
   </property>
   <property name="text">
    <string>Delete Channel</string>
   </property>
   <property name="toolTip">
    <string>Delete Channel</string>
   </property>
  </action>
  <action name="actionSave">
   <property name="icon">
    <iconset resource="images.qrc">
     <normaloff>:/icons/images/filesave.png</normaloff>:/icons/images/filesave.png</iconset>
   </property>
   <property name="text">
    <string>Save</string>
   </property>
  </action>
  <action name="actionClose">
   <property name="icon">
    <iconset resource="images.qrc">
     <normaloff>:/icons/images/fileclose.png</normaloff>:/icons/images/fileclose.png</iconset>
   </property>
   <property name="text">
    <string>Close</string>
   </property>
  </action>
  <action name="actionReload">
   <property name="icon">
    <iconset resource="images.qrc">
     <normaloff>:/icons/images/refresh.png</normaloff>:/icons/images/refresh.png</iconset>
   </property>
   <property name="text">
    <string>Reload</string>
   </property>
  </action>
  <action name="actionImport">
   <property name="icon">
    <iconset resource="images.qrc">
     <normaloff>:/icons/images/fileimport.png</normaloff>:/icons/images/fileimport.png</iconset>
   </property>
   <property name="text">
    <string>Import</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="images.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>editName</sender>
   <signal>textChanged(QString)</signal>
   <receiver>EditPlaylist</receiver>
   <slot>setWindowTitle(QString)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>199</x>
     <y>82</y>
    </hint>
    <hint type="destinationlabel">
     <x>127</x>
     <y>-15</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
